# CGrimoire

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/CGrimoire/: array.h  hashmap.h  iterator.h  queue.h  stack.h  string.h  vector.h
include/CGrimoire/details/: defines.h
src/: CMakeLists.txt  array.c  hashmap.c  iterator.c  queue.c  stack.c  string.c  vector.c
test/: CMakeLists.txt  array.c  hashmap.c  main.c  queue.c  stack.c  string.c  vector.c
